# ZinharCMS

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  package.json
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prod
backend/migrations/: 0001_initial_schema.sql  0002_seed_foundation_data.sql  0003_phase_one_core.sql  0004_phase_two_page_builder.sql  0005_phase_five_delivery_api.sql  0006_phase_six_workflow_collaboration.sql  0007_phase_seven_security.sql  0008_v2_phase_one_organizations.sql  0009_v2_phase_three_rls.sql  0010_v2_phase_five_billing_quota.sql  0011_v2_phase_six_stripe_billing.sql  0012_v2_phase_seven_saas_ops.sql  0013_v2_phase_eight_hardening.sql  0014_v2_phase_nine_beta_release.sql  0015_v3_phase_one_marketplace_foundation.sql  0016_v3_phase_two_creator_submission.sql  0017_v3_phase_three_validation_pipeline.sql  0018_v3_phase_four_review_moderation.sql  0019_v3_phase_six_installation_lifecycle.sql  0020_v3_phase_seven_permission_sandbox_kill_switch.sql  0021_v3_phase_eight_runtime_adapters.sql  0022_v3_phase_nine_marketplace_finance.sql  0023_v3_phase_nine_finance_hardening.sql  0024_v3_phase_ten_ratings_abuse.sql  0025_v3_phase_ten_internal_notifications.sql  0026_v3_phase_thirteen_marketplace_qa_performance.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs  mod.rs  security.rs  tenant.rs
backend/src/models/: content.rs  media.rs  mod.rs  organization.rs  page.rs  user.rs
backend/src/plugins/: mod.rs  seo.rs
backend/src/routes/: auth.rs  beta.rs  billing.rs  comments.rs  content.rs  delivery.rs  marketplace.rs  marketplace_adapters.rs  marketplace_analytics.rs  marketplace_finance.rs  marketplace_runtime.rs  media.rs  mod.rs  organizations.rs  pages.rs  plugins.rs  webhooks.rs
backend/src/services/: audit.rs  cache.rs  email.rs  entry_validation.rs  ga_readiness.rs  hardening.rs  health.rs  jwt.rs  marketplace_adapters.rs  marketplace_analytics.rs  marketplace_catalog.rs  marketplace_domain.rs  marketplace_feedback.rs  marketplace_finance.rs  marketplace_installation.rs  marketplace_manifest.rs  marketplace_package.rs  marketplace_performance.rs  marketplace_phase_fifteen.rs  marketplace_phase_fourteen.rs  marketplace_phase_thirteen.rs  marketplace_policy.rs  marketplace_readiness.rs  marketplace_review.rs  (+14 more)
(+567 files in other folders)
