[package]
name = "cms-backend"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
redis = { version = "0.28", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["compression-full", "cors", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "4", features = ["chrono", "uuid"] }
uuid = { version = "1.16", features = ["serde", "v7"] }

[dev-dependencies]
tower = "0.5"
