[package]
name = "cms-backend"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rand_core = { version = "0.6", features = ["getrandom"] }
redis = { version = "0.28", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6", features = ["compression-full", "cors", "fs", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1.16", features = ["serde", "v7"] }

[dev-dependencies]
tower = "0.5"
